Fix to places temperature alignment

--- a/wp-content/themes/cae/assets/css/main.css
+++ b/wp-content/themes/cae/assets/css/main.css
@@ -5736,6 +5736,7 @@ body .animsition-loading {
   .place-grid .temperature {
     font-size: 24px;
     min-height: 32px;
+    line-height: 1.7;
     position: relative;
     display: inline;
     z-index: 2;
@@ -5763,6 +5764,8 @@ body .animsition-loading {
   .place-grid li a:not(.placemarker):hover {
     background: #d51f2c url(../img/svg/pattern.svg) repeat;
     color: #fff; }
+    .place-grid li a:not(.placemarker):hover h2 {
+      color: #fff; }
     .place-grid li a:not(.placemarker):hover .temperature {
       color: #fff; }
     .place-grid li a:not(.placemarker):hover .temperature:after {
