--- a/wp-content/themes/cae/assets/scss/partials/_places.scss
+++ b/wp-content/themes/cae/assets/scss/partials/_places.scss
@@ -61,6 +61,7 @@
 	.temperature {
 		font-size:24px;
 		min-height:32px;
+		line-height: 1.7;
 		position: relative;
 		display: inline;
 		z-index:2;
@@ -88,6 +89,9 @@
 	li a:not(.placemarker):hover {
 		background:$red url(../img/svg/pattern.svg) repeat;
 		color:$white;
+		h2 {
+			color: $white;
+		}
 		.temperature {
 			color:$white;
 		}
